[gd_scene load_steps=9 format=2]

[ext_resource path="res://scene2D/selectServer.gd" type="Script" id=1]
[ext_resource path="res://assets/images/interface/btn_blue.png" type="Texture" id=2]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.160784, 0.592157, 0.968627, 0.262745, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 580

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/normal.ttf"

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/fonts/normal.ttf"

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = SubResource( 5 )

[node name="SelectServerPopup" type="Node2D"]
position = Vector2( 230, 100 )
script = ExtResource( 1 )

[node name="style" type="Node2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="ColorRect3" type="ColorRect" parent="style"]
margin_left = 7.0
margin_top = 7.0
margin_right = 587.0
margin_bottom = 387.0
color = Color( 0, 0, 0, 0.145098 )

[node name="ColorRect" type="ColorRect" parent="style"]
margin_right = 580.0
margin_bottom = 380.0
color = Color( 0.172549, 0.192157, 0.196078, 1 )

[node name="ColorRect2" type="ColorRect" parent="style"]
margin_right = 580.0
margin_bottom = 70.0
color = Color( 0.164706, 0.227451, 0.243137, 1 )

[node name="ColorRect4" type="ColorRect" parent="style"]
margin_top = 69.0
margin_right = 580.0
margin_bottom = 71.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect6" type="ColorRect" parent="style"]
margin_right = 580.0
margin_bottom = 2.0

[node name="ColorRect7" type="ColorRect" parent="style"]
margin_right = 2.0
margin_bottom = 379.0
color = Color( 1, 1, 1, 0.392157 )

[node name="ColorRect8" type="ColorRect" parent="style"]
margin_left = 578.0
margin_right = 580.0
margin_bottom = 379.0
color = Color( 0, 0, 0, 0.392157 )

[node name="ColorRect5" type="ColorRect" parent="style"]
margin_top = 378.0
margin_right = 580.0
margin_bottom = 380.0
color = Color( 0, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="style"]
scale = Vector2( 1, 68.604 )
texture = SubResource( 2 )
centered = false

[node name="title" type="RichTextLabel" parent="."]
margin_top = 17.0
margin_right = 580.0
margin_bottom = 59.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]SELECT SERVER"
text = "SELECT SERVER"
scroll_active = false
__meta__ = {
"_edit_lock_": true
}

[node name="btn_server_local" type="Sprite" parent="."]
position = Vector2( 280, 150 )
texture = ExtResource( 2 )

[node name="btnLocal" type="Control" parent="btn_server_local"]
margin_left = -107.0
margin_top = -28.0
margin_right = 107.0
margin_bottom = 32.0

[node name="title" type="RichTextLabel" parent="btn_server_local"]
margin_left = -104.0
margin_top = -15.0
margin_right = 105.0
margin_bottom = 27.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[center]local_host"
text = "local_host"
scroll_active = false

[node name="title2" type="RichTextLabel" parent="btn_server_local"]
modulate = Color( 1, 1, 1, 0.352941 )
margin_left = -104.0
margin_top = 35.0
margin_right = 105.0
margin_bottom = 77.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[center]( Pour les dev )"
text = "( Pour les dev )"
scroll_active = false

[node name="btn_server_web" type="Sprite" parent="."]
position = Vector2( 280, 260 )
texture = ExtResource( 2 )

[node name="btnWeb" type="Control" parent="btn_server_web"]
margin_left = -107.0
margin_top = -28.0
margin_right = 107.0
margin_bottom = 32.0

[node name="title" type="RichTextLabel" parent="btn_server_web"]
margin_left = -104.0
margin_top = -15.0
margin_right = 105.0
margin_bottom = 27.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[center]Dev-rocket.fr"
text = "Dev-rocket.fr"
scroll_active = false

[node name="title2" type="RichTextLabel" parent="btn_server_web"]
modulate = Color( 1, 1, 1, 0.352941 )
margin_left = -212.0
margin_top = 35.0
margin_right = 224.0
margin_bottom = 77.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[center]( Pour les sessions de test à plusieur)"
text = "( Pour les sessions de test à plusieur)"
scroll_active = false

[node name="look" type="Node" parent="."]
editor/display_folded = true
[connection signal="gui_input" from="btn_server_local/btnLocal" to="." method="_on_serverLocal_gui_input"]
[connection signal="mouse_entered" from="btn_server_local/btnLocal" to="." method="_on_btnLocal_mouse_entered"]
[connection signal="mouse_exited" from="btn_server_local/btnLocal" to="." method="_on_btnLocal_mouse_exited"]
[connection signal="gui_input" from="btn_server_web/btnWeb" to="." method="_on_serverWeb_gui_input"]
[connection signal="mouse_entered" from="btn_server_web/btnWeb" to="." method="_on_btnWeb_mouse_entered"]
[connection signal="mouse_exited" from="btn_server_web/btnWeb" to="." method="_on_btnWeb_mouse_exited"]
